docs: Archive completed Sprint 8 & 9, compact SPRINT10.md
- Archive SPRINT8.md → docs/archive/sprints/SPRINT_8.md (v0.4.2, 4D Projection + UX)
- Archive SPRINT9.md → docs/archive/sprints/SPRINT_9.md (v0.4.3, TesseractSponge)
- Compact SPRINT10.md from 2377 to 740 lines (below 25k token limit)
  - Preserved all task descriptions, estimates, and key code patterns
  - Condensed full implementations to representative patterns
  - Reduced repetitive test code and overload examples
- Update SPRINT.md to reflect Sprint 10 as current active sprint
- Update docs/sprints/README.md with completed sprints table
- Delete merged feature branches: sprint-6, sprint-7, sprint-8, sprint-9

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>